--- a/rtdetr_pytorch/requirements.txt
+++ b/rtdetr_pytorch/requirements.txt
@@ -1,8 +1,10 @@
+numpy<2.0
 torch==2.0.1
 torchvision==0.15.2
+torchaudio==2.0.2
 onnx==1.14.0
 onnxruntime==1.15.1
 pycocotools
 PyYAML
 scipy
-transformers
+transformers==4.30.2
